[gd_scene load_steps=5 format=3 uid="uid://vxrot147gqjt"]

[ext_resource type="Texture2D" uid="uid://d0h4pa528f0nv" path="res://sprites/general_sprites/reroll.png" id="1_2ao11"]
[ext_resource type="Script" path="res://shopload.gd" id="1_gw8on"]
[ext_resource type="Script" path="res://Reroll.gd" id="2_asa81"]
[ext_resource type="Texture2D" uid="uid://cmhfuu0yms6re" path="res://sprites/general_sprites/pokeball.png" id="3_o5fln"]

[node name="Shop" type="Node2D"]
script = ExtResource("1_gw8on")

[node name="StaticBody2D" type="StaticBody2D" parent="."]

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="StaticBody2D"]
polygon = PackedVector2Array(0, 400, 0, 720, 1280, 720, 1280, 400)

[node name="Button" type="Button" parent="."]
offset_left = 1000.0
offset_top = 100.0
offset_right = 1208.0
offset_bottom = 354.0
scale = Vector2(0.5, 0.5)
text = "R"
icon = ExtResource("1_2ao11")
clip_text = true
icon_alignment = 1
vertical_icon_alignment = 0
script = ExtResource("2_asa81")

[node name="pokeball_1" type="Sprite2D" parent="."]
position = Vector2(150, 350)
texture = ExtResource("3_o5fln")

[node name="pokeball_2" type="Sprite2D" parent="."]
position = Vector2(350, 350)
texture = ExtResource("3_o5fln")

[node name="pokeball_3" type="Sprite2D" parent="."]
position = Vector2(550, 350)
texture = ExtResource("3_o5fln")

[node name="pokeball_4" type="Sprite2D" parent="."]
position = Vector2(750, 350)
texture = ExtResource("3_o5fln")

[node name="pokeball_5" type="Sprite2D" parent="."]
position = Vector2(950, 350)
texture = ExtResource("3_o5fln")

[node name="pokemon_1" type="Sprite2D" parent="."]
position = Vector2(150, 350)

[node name="pokemon_2" type="Sprite2D" parent="."]
position = Vector2(350, 350)

[node name="pokemon_3" type="Sprite2D" parent="."]
position = Vector2(550, 350)

[node name="pokemon_4" type="Sprite2D" parent="."]
position = Vector2(750, 350)

[node name="pokemon_5" type="Sprite2D" parent="."]
position = Vector2(950, 350)
